3 examples added and accompanying text

--- a/Paper/Makefile
+++ b/Paper/Makefile
@@ -3,17 +3,29 @@ TARGET=tracing
 FIGFILES=$(wildcard *.fig)
 FIG2PDF=$(FIGFILES:.fig=.pdf)
 
-EXTRAREQS=versionInfo.txt $(FIG2PDF) tracingAlgOpts.txt oneMinuteStatusOutput.txt
+EXTRAREQS= \
+versionInfo.txt \
+$(FIG2PDF) \
+tracingAlgOpts.txt \
+oneMinuteStatusOutput.txt \
+Code/OneMinuteExample/oad_tr_001.xml \
+Code/OneMinuteExample/oad_tr_002.xml \
+Code/ControlFlow/oad_tr_001.xml \
+Code/ControlFlow/oad_tr_002.xml \
+Code/ArrayIndex/oad_tr_001.xml \
+Code/ArrayIndex/oad_tr_002.xml \
+Code/CallStack/oad_tr_001.fxml \
+Code/CallStack/oad_tr_002.fxml 
 
 THISDIR=$(shell pwd)
 
 
 ifndef OPENADROOT
-$(error "environment variable OPENADROOT undefined")
+$(error "OpenAD environment not set")
 endif
 
 $(TARGET).pdf : $(TARGET).aux $(TARGET).blg $(TARGET).bbl
-	# run it twice
+# run it twice
 	pdflatex $(TARGET)
 	pdflatex $(TARGET)
 
@@ -29,8 +41,23 @@ tracingAlgOpts.txt : FORCE
 oneMinuteStatusOutput.txt : FORCE
 	./createOneMinuteOutput.sh
 
+Code/OneMinuteExample/oad_tr_001.xml Code/OneMinuteExample/oad_tr_002.xml : 
+	cd Code/OneMinuteExample && $(MAKE)
+
+Code/ControlFlow/oad_tr_001.xml Code/ControlFlow/oad_tr_002.xml : 
+	cd Code/ControlFlow && $(MAKE)
+
+Code/ArrayIndex/oad_tr_001.xml Code/ArrayIndex/oad_tr_002.xml : 
+	cd Code/ArrayIndex && $(MAKE)
+
+Code/CallStack/oad_tr_001.xml Code/CallStack/oad_tr_002.xml : 
+	cd Code/CallStack && $(MAKE) 
+
+%.fxml: %.xml
+	xmlformat.pl $< > $@
+
 $(TARGET).aux :  extraReqs $(TARGET).tex $(TARGET).bib 
-	# ensure we make a .aux file
+# ensure we make a .aux file
 	pdflatex $(TARGET)
 
 $(TARGET).blg $(TARGET).bbl: $(TARGET).aux
@@ -42,6 +69,9 @@ $(TARGET).blg $(TARGET).bbl: $(TARGET).aux
 clean: 
 	rm -f *~ *bak $(TARGET).{toc,aux,ps,pdf,out,log,lof,lot,bbl,blg,dvi} $(EXTRAREQS)
 	cd Code/OneMinuteExample && $(MAKE) clean
+	cd Code/ControlFlow && $(MAKE) clean
+	cd Code/ArrayIndex && $(MAKE) clean
+	cd Code/CallStack && $(MAKE) clean
 
 .PHONY: clean extraReqs
 
