separate openad call as phony target or else the make on occasion gets confused and somehow skips the openad invocation and generates an empty head... target file. I am not sure how this happens but assume it was caused by having multiple targets and some make internal mechanism with reinvoking openad...

--- a/Paper/Code/OneMinuteExample/Makefile
+++ b/Paper/Code/OneMinuteExample/Makefile
@@ -6,7 +6,8 @@ run: driver
 	./driver
 driver: $(addsuffix .o, $(RTSUPP)) driver.o head.prepped.xb.x2w.w2f.pp.o
 	${F90C} -o $@ $^
-head.prepped.xb.x2w.w2f.pp.f $(addsuffix .f90, $(RTSUPP)) : head.prepped.f90
+head.prepped.xb.x2w.w2f.pp.f $(addsuffix .f90, $(RTSUPP)) : toolChain
+toolChain : head.prepped.f90
 	openad -c -m t $<
 %.o : %.f90
 	${F90C} -o $@ -c $< 
@@ -15,4 +16,4 @@ head.prepped.xb.x2w.w2f.pp.f $(addsuffix .f90, $(RTSUPP)) : head.prepped.f90
 clean: 
 	rm -f ad_template* OAD_* w2f__*  iaddr* 
 	rm -f head.prepped.xb* *.B *.xaif *.o *.mod oad_tr_* driver *~ 
-.PHONY: run clean
+.PHONY: run clean toolChain
