--- a/Paper/Code/OneMinuteExample/Makefile
+++ b/Paper/Code/OneMinuteExample/Makefile
@@ -4,13 +4,11 @@ endif
 RTSUPP=w2f__types OAD_active OAD_rev OAD_trace
 run: driver
 	./driver
-driver: $(addsuffix .o, $(RTSUPP)) driver.o head.prepped.xb.x2w.w2f.pp.o
+driver: $(addsuffix .o, $(RTSUPP)) driver.o head.prepped.pre.xb.x2w.w2f.post.o
 	${F90C} -o $@ $^
-head.prepped.xb.x2w.w2f.pp.f $(addsuffix .f90, $(RTSUPP)) : head.prepped.f90
+head.prepped.pre.xb.x2w.w2f.post.f90 $(addsuffix .f90, $(RTSUPP)) : head.prepped.f90
 	openad -c -m t $<
 %.o : %.f90
-	${F90C} -o $@ -c $< 
-%.o : %.f
 	${F90C} -o $@ -c $< 
 clean: 
 	rm -f ad_template* OAD_* w2f__*  iaddr* 
